--- a/README.html
+++ b/README.html
@@ -6,7 +6,8 @@
 		icons:
 			https://fontawesome.com
 --->
-<body style="text-align:center">
+
+<body align="center">
 
 	<h3>Hi there, I'm PlatinBae</h3> 👋 <img src="https://komarev.com/ghpvc/?username=platinbae&color=red" alt="" align="center" />
 
